--- a/direkcijas-lenkis-un-azimuts.html
+++ b/direkcijas-lenkis-un-azimuts.html
@@ -307,7 +307,7 @@
     <!-- 3D Kompass -->
     <div class="compass-container">
       <img src="./img/pamatne.png" class="compass-base" alt="Kompass pamats (3D)">
-      <img src="https://site-710050.mozfiles.com/files/710050/KOMPASA_SKALA_CADET_LV_PV6_V3.png" class="compass-scale" alt="Kompass skala (3D)">
+      <img src="./img/skala.png" class="compass-scale" alt="Kompass skala (3D)">
       <img src="./img/adata.png" class="compass-needle" alt="Kompass adata (3D)">
       <div class="rotation-indicator-3d">
         <div class="rotation-dot-3d"></div>
@@ -342,8 +342,8 @@
         </svg>
       </div>
       <img src="https://site-710050.mozfiles.com/files/710050/KOMPASA_SKALA_BACKGROUND_CADET_LV_PV2-1.png" class="compass-2d-scale-Background" alt="Kompass fons (2D)">
-      <img src="https://site-710050.mozfiles.com/files/710050/KOMPASA_SKALA_CADET_LV_PV6_V3.png" class="compass-2d-scale" alt="Kompass skala (2D)">
-      <img src="https://site-710050.mozfiles.com/files/710050/VIRTUALAIS_KOMPASS_ADATA_CADET_LV_PV4-1.png" class="compass-2d-needle" alt="Kompass adata (2D)">
+      <img src="./img/skala.png" class="compass-2d-scale" alt="Kompass skala (2D)">
+      <img src="./img/adata.png" class="compass-2d-needle" alt="Kompass adata (2D)">
       <div class="rotation-indicator-2d">
         <div class="rotation-dot-2d"></div>
       </div>
