--- a/direkcijas-lenkis-un-azimuts.html
+++ b/direkcijas-lenkis-un-azimuts.html
@@ -341,7 +341,7 @@
           </g>
         </svg>
       </div>
-      <img src="./img/KOMPASA_SKALA_BACKGROUND.png" alt="Kompass fons (2D)">
+      <img src="./img/KOMPASA_SKALA_BACKGROUND.png" class="compass-2d-scale-Background" alt="Kompass fons (2D)">
       <img src="./img/skala.png" class="compass-2d-scale" alt="Kompass skala (2D)">
       <img src="./img/adata.png" class="compass-2d-needle" alt="Kompass adata (2D)">
       <div class="rotation-indicator-2d">
