--- a/index.html
+++ b/index.html
@@ -1355,7 +1355,7 @@ body.preloading { overflow: hidden; }
 							
 							        <div class="dropdown-menu" id="dropdownMaterials">
 							        <a href="https://cadet.mozello.lv/virtualais-kompass-macibu-materiali-un-instrukcija/macibu-materiali/topografiskas-kartes/" class="dropdown-link">TOPOGRĀFISKĀS KARTES</a>
-							        <a href="https://cadet.mozello.lv/virtualais-kompass-macibu-materiali-un-instrukcija/macibu-materiali/merogs-un-attalumi/" class="dropdown-link">MĒROGS UN ATTĀLUMI</a>
+							        <a href="merogs-un-attalumi.html" class="dropdown-link">MĒROGS UN ATTĀLUMI</a>
 							        <a href="https://cadet.mozello.lv/virtualais-kompass-macibu-materiali-un-instrukcija/macibu-materiali/apzimejumi-kartes/" class="dropdown-link">APZĪMĒJUMI KARTĒS</a>
 							        <a href="direkcijas-lenkis-un-azimuts.html" class="dropdown-link">DIREKCIJAS LEŅĶIS UN AZIMUTS</a>
 
