--- a/merogs-un-attalumi.html
+++ b/merogs-un-attalumi.html
@@ -11,7 +11,8 @@
     body{
       margin:0;
       font-family: system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
-      background:#f5efe5;
+      background-image: url(https://static.vecteezy.com/system/resources/previews/027/447/151/large_2x/an-image-of-soldiers-in-battle-amidst-explosions-and-smoke-silhouette-concept-free-photo.jpg);
+      background-repeat: no-repeat, repeat;
     }
 
     /* 3 konteineru izkārtojums */
