--- a/merogs-un-attalumi.html
+++ b/merogs-un-attalumi.html
@@ -4,14 +4,12 @@
   <meta charset="UTF-8">
   <title>Mērogs un attālumi — Virtuālais kompass</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- ja gribi, vari piesaistīt arī kopējo style.css -->
-  <link rel="stylesheet" href="style.css?v=2025-09-29-01">
 
   <style>
     body{
       margin:0;
       font-family: system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
-      background-image: url(./img/topografija.jpg);
+      background-image: url("./img/topografija.jpg");
       background-repeat: no-repeat, repeat;
     }
 
