--- a/merogs-un-attalumi.html
+++ b/merogs-un-attalumi.html
@@ -11,6 +11,7 @@
       font-family: system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
       background-image: url("./img/topografija.jpg");
       background-repeat: no-repeat, repeat;
+      backdrop-filter: brightness(70%);
     }
 
     /* 3 konteineru izkārtojums */
