--- a/merogs-un-attalumi.html
+++ b/merogs-un-attalumi.html
@@ -15,13 +15,17 @@
     }
 
     /* 3 konteineru izkārtojums */
-    .parent {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: repeat(3, auto);
-      gap: 8px;
-      padding: 12px;
-    }
+   .parent {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, auto);
+  gap: 8px;
+  padding: 12px;
+
+  /* JAUNAIS */
+  max-width: 1200px;      /* vai citu vērtību, kas patīk */
+  margin: 40px auto;      /* atstāj malas un iecentrē */
+}
     .div1,
     .div2,
     .div3{
