--- a/merogs-un-attalumi.html
+++ b/merogs-un-attalumi.html
@@ -6,12 +6,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style>
+    /* width */
+  ::-webkit-scrollbar {
+      width: 5px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+      box-shadow: inset 0 0 5px grey; 
+      border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+      background: rgba(255, 0, 0, 0.6); 
+      border-radius: 10px;
+  }
     body{
-      margin:0;
-      font-family: system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
-      background-image: url("./img/topografija.jpg");
-      background-repeat: no-repeat, repeat;
-      backdrop-filter: brightness(70%);
+      margin: 0;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      background-image: url(./img/topografija.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+      min-height: 100vh;
+}
     }
 
     /* 3 konteineru izkārtojums */
@@ -23,7 +42,7 @@
   padding: 12px;
 
   /* JAUNAIS */
-  max-width: 1200px;      /* vai citu vērtību, kas patīk */
+  max-width: 90%;      /* vai citu vērtību, kas patīk */
   margin: 40px auto;      /* atstāj malas un iecentrē */
 }
     .div1,
@@ -58,7 +77,7 @@
     #scaleMapContainer {
       position: relative;
       width: 100%;
-      height: 95vh;
+      height: 85vh;
       overflow: hidden;
       background: black;
       border-radius: 7px;
