--- a/azimuts.html
+++ b/azimuts.html
@@ -169,7 +169,7 @@
   padding: 10px 10px 12px;
 
   background-color: rgba(0, 0, 0, 0.7);
-  border-radius: 16px;
+  border-radius: 50%;
   filter: drop-shadow(0 0 40px rgba(0, 0, 0, 0.7));
 
   display: flex;
@@ -328,7 +328,7 @@
       transform: translateX(-50%);
       width: 100%;
       top: -15%;
-      z-index: 10;
+      z-index: 1;
     }
     .arc-buttons svg {
       width: 131%;
