--- a/azimuts.html
+++ b/azimuts.html
@@ -193,6 +193,7 @@
     transform: translate(-50%, -38%);
     width: 130%;
     max-width: 320px;
+    pointer-events: none;
 }
 
 /* Palielinātajā režīmā pogas nedaudz tuvāk aplim un platākas */
