--- a/azimuts.html
+++ b/azimuts.html
@@ -241,6 +241,62 @@
       letter-spacing: 2px;
     }
 
+/* ===== PRELOADER (no index.html minimālā versija) ===== */
+
+/* body stāvoklis ielādes laikā */
+body.preloading { overflow: hidden; }
+
+/* pilnekrāna pārklājums */
+#app-preloader{
+  position: fixed;
+  top: 0; left: 0; right: 0; bottom: 0;
+  z-index: 2147483647;
+  display: grid; place-items: center;
+  padding: 16px;
+  background: linear-gradient(180deg,#0b0f14,#11161d);
+  color: #eef2f7;
+  min-height: 100vh;
+  min-height: calc(var(--vh, 1vh) * 100);
+}
+
+#app-preloader .preloader-inner{
+  width: min(540px, 94vw);
+  background: rgba(0,0,0,.25);
+  border: 1px solid rgba(255,255,255,.08);
+  border-radius: 16px;
+  padding: 16px 18px 14px;
+  box-shadow: 0 10px 30px rgba(0,0,0,.45);
+  text-align: center;
+}
+#app-preloader .logo{ font-weight: 700; margin-bottom: 6px; letter-spacing: .3px; }
+#app-preloader .msg{ margin: .2rem 0 .6rem; opacity: .9; }
+
+#app-preloader .progress{
+  height: 10px; border-radius: 999px; overflow: hidden;
+  background: rgba(255,255,255,.09);
+  border: 1px solid rgba(255,255,255,.12);
+}
+#app-preloader .progress > span{
+  display:block; height:100%; width:0%;
+  background: linear-gradient(90deg,#aa2d2d,#d63c3c);
+  transition: width .25s ease;
+}
+
+#preloaderSkip{
+  display: none; margin-top: .8rem;
+  padding: .5rem .8rem;
+  background:#2b2f36; color:#fff;
+  border:1px solid rgba(255,255,255,.12);
+  border-radius:10px; cursor:pointer;
+}
+#app-preloader.show-skip #preloaderSkip{ display: inline-block; }
+
+#app-preloader.hidden{
+  opacity: 0; visibility: hidden;
+  transition: opacity .36s ease, visibility 0s linear .4s;
+}
+
+    
     /* Mobilajām ierīcēm – tikai izmēri, nevis izkārtojums */
     @media (max-width: 768px) {
       .pano-block {
@@ -271,8 +327,27 @@
     }
   </style>
 </head>
-<body>
+<body class="preloading">
 
+<!-- PRELOADER -->
+<div id="app-preloader" role="status" aria-live="polite" aria-label="Ielādējam…">
+  <div class="preloader-inner">
+    <img class="brand" src="./img/CADET.LV.png" alt="CADET.LV" />
+
+    <div class="spinner" aria-hidden="true"></div>
+    <div class="progress"><span style="width:0%"></span></div>
+    <p class="msg">Ielādējam… 0%</p>
+    <div class="preloader-about" aria-label="Par projektu">
+      <span>CADET.LV</span>
+      <span>INTERAKTĪVAIS KOMPASS</span>
+      <span>© JĀNIS EGLIS</span>
+    </div>
+    <button id="preloaderSkip" class="skip" type="button">Turpināt</button>
+  </div>
+</div>
+
+
+  
   <div class="pano-block">
     <div id="panorama"></div>
     <video id="liveVideo" autoplay playsinline></video>
@@ -352,6 +427,31 @@
         yaw: -0.5,
         ignoreGPanoXMP: true
       });
+      // === PRELOADER: helper, lai paslēptu ===
+      function hidePreloader() {
+        var pre = document.getElementById('app-preloader');
+        if (!pre) return;
+        document.body.classList.remove('preloading');
+        pre.classList.add('hidden');
+
+        var bar = pre.querySelector('.progress > span');
+        var msg = pre.querySelector('.msg');
+        if (bar) bar.style.width = '100%';
+        if (msg) msg.textContent = 'Ielādēts — 100%';
+      }
+
+      // Kad panorāma pilnībā ielādēta – slēdzam preloaderi
+      viewer.on('load', function () {
+        hidePreloader();
+      });
+
+      // Skip poga – ja gribi ļaut lietotājam nospiest "Turpināt"
+      var skipBtn = document.getElementById('preloaderSkip');
+      if (skipBtn) {
+        skipBtn.addEventListener('click', function () {
+          hidePreloader();
+        });
+      }
 
       /* ===== Adata no panorāmas yaw ===== */
       function updateCompassNeedles() {
